web-ui/src/main/webapp/app/css/custom.css
html, body {
	height: 100%;
	margin: 0px;
	padding: 0px;
	overflow: hidden;
	font-family: arial !important;
}

* {
	outline: 0px !important;
}

body a {
	color: #2e69b3;
}

body {
	border-left: 1px solid #3068b1 !important;
	border-right: 1px solid #3068b1 !important;
	position: absolute;
	bottom: 19px;
	width: 100%;
	top: 0px;
	overflow: auto;
	min-height: 94% !important;
	height: auto;
}

body .text-primary {
	color: #2e69b3;
}

.main-ui-view {
	position: absolute;
	top: 0px;
	bottom: 0px;
	overflow: auto;
	left: 0px;
	right: 0px;
}

.tab-container {
	position: absolute;
	top: 5px;
	left: 0px;
	right: 0px;
	bottom: 0px;
}

/* filter-tag */
.filter-tag-container {
	margin: 0px 0px 0px -3px;
	position: relative;
	line-height: 18px;
	width: 100%;
	float: left;
	clear: left;
	font-size: 11px;
}

.filter-tag-reset {
	color: #2e69b3;
	cursor: pointer;
}

.filter-tag {
	background-color:#e7e7e7;
	padding: 0px 4px;
	float: left;
	margin: 1px 2px;
	position: relative;
	border: 1px solid #dedede;
}

.filter-tag-text {
	float: left;
	margin-right: 5px;
	height: 16px;
	overflow: hidden;
	width: auto;
	color: #666;
}

.filter-tag-close {
	cursor: pointer;
	color: #999;
	float: left;
	margin-top: 1px;
	margin-bottom: 1px;
}

/* clear-form */
.clear-form .clear-form-trigger {
	display: none;
}

.clear-form.clear-form-active .clear-form-trigger {
	display: inline;
}

.background-white {
	background-color: #fff;
}

.page-loading {
	width: 100%;
	height: 100%;
}

.form-search .input-group .search-input {
	font-size: 11px;
	height: 18px;
	padding: 0px;
	margin: 4px 0px;
	padding: 0px 0px 0px 10px;
	border: 0px;
	/*border-right: 1px solid #b5b5b5;*/
	font-weight: normal;
	line-height: 16px;
}

.form-search .input-group .search-input.search-field {
	background-color: transparent;
}

.form-search .input-group:focus {
	border-color: #42BCF5 !important;
}

.form-search .input-group:hover,
.form-search .input-group.active {
	background-color: #fefdd4;
}

.form-search .input-group.active .icon-search,
.form-search .input-group.active .icon-caret-down {
	color: #2e69b3;
}

.main-area,
.main-area > .navigation,
.main-area > .navigation > .tabbable,
.main-area > .navigation > .tabbable > .tab-content,
.main-area > .navigation > .tabbable > .tab-content > .tab-pane {
	height: 100%;
}

.main-area > .navigation > .tabbable > .tab-content > .tab-pane {
	position: relative;
}

.main-area > .navigation > .tabbable > .tab-content > .tab-pane, 
.top-nav > .tab-content, 
.main-area, 
.main-area > .navigation > .tabbable, 
.main-area > .navigation, 
.wrapper {
	min-width: 1547px;
	width: 100%;
	min-height: 400px;
}

.main-area {
	position: absolute;
	bottom: 5px;
	width: 100%;
	top: 40px;
	height: auto;
}

.wrapper {
	position: absolute;
	bottom: 0px;
	top: 0px;
	left: 0px;
	right: 0px;
/*	min-height: 100%;
	height: auto !important;
	height: 100%;
*/
	margin: 0px auto 0px;
}

.push {
	clear: both;
	height: 19px;
}

/* splitter */
.main {
	position: absolute !important;
	bottom: 0px;
	min-width: 1230px;
	width: 100%;
	height: auto;
	top: 0px;
/*	bottom: 57px;
	top: 12px;
	right: 0px;
	left: 0px;
*/
}

.split-handler {
	width: 4px;
	z-index: 99;
	cursor: ew-resize;
}

.splitter-bar {
	width: 5px;
	cursor: ew-resize;
}

.splitter-bar-vertical.ui-state-highlight {
	border-left: 1px dashed #58585a;
	border-right: 1px dashed #58585a;
	width: 5px;
}

/* msgview */
.msgview {
	position: absolute;
	right: 0px;
	bottom: -9px;
	top: -6px;
	overflow: hidden !important;
	padding-left: 0px;
	width: 718px;
}

.msgview .placeholder_text {
	position: absolute;
}

.msgview .tabbable {
	top: 2px;
	position: absolute;
	right: 0px;	
	left: 0px;
	bottom: -9px;
}

.msgview .placeholder_text {
	float: left;
}
/*
.msgview .scrollbar-hidden,
.msgview .scrollbar-hidden .jspContainer,
.msgview .scrollbar-hidden .jspPane {
	width: 100% !important;
}
*/
.msgview .scrollbar-hidden > .jspContainer > .jspPane {
	width: 100% !important;
	padding-top: 0px !important;
}

.msgview > .tabbable > .tab-content {
	background-color: #fff;
	right: 0px;
	left: 0px;
	padding: 0px 14px;
	position: absolute;
	bottom: 0px;
	overflow: hidden;
	top: 25px;
	padding-top: 0px;
	border-bottom: 0px;
}

.msgview .label {
	color: #fff;
	font-weight: bold;
	margin: 2px 0px;
	font-size: 11px;
	padding: 3px 2px;
	width: 37px;
	text-align: center;
	background-color: #b1b1b1 !important;
}

.msgview .label-content {
	padding: 6px 17px;
	overflow: hidden;
	font-size: 11px;
	min-height: 19px;
	height: 19px;
	margin-bottom: 5px;
	margin-top: 2px;
}

.msgview_top {
	margin: 0px 0px;
}

.msgview_top .from-picture-container {
	position: absolute;
	width: 37px;
}

.msgview_top .header-container {
	height: 36px;
	margin-bottom: 11px;
	width: 100%;
	padding-left: 53px;
	word-wrap: break-word;
}

.msgview_subject {
	font-size: 18px;
	line-height: 15px;
	height: 21px;
	overflow: hidden;
}

.msgview_date {
	height: 22px;
	overflow: hidden;
	font-size: 16px;
	line-height: 10px;
	margin: 2px 0px 0px 0px;
}

.sgview_main {
	margin-top: 10px;
}

.msgview_top h3 {
	margin: 0px;
}

.message-header {
	position: relative;
}

.msgview_main {
	margin-top: 12px;
}

.msgview_bottom {
	background-color: #fff;
	border-top: 1px solid #c5d0dc;
	margin-top: 25px;
	position: absolute;
	bottom: 0px;
	width: 100%;
}

.msgview_bottom .icon-container {
	width: 36px;
	position: absolute;
	left: 0px;
	margin-top: 5px;
}

.msgview_bottom .attachment-text {
	margin-left: 50px;
}

.msgview_middle {
	position: absolute;
	bottom: 12px;
	left: 12px;
	right: 11px;
	top: 127px;
	margin: 0px 0px;
	width: auto !important;
}

.msgview_middle .jspContainer {
	width: 100% !important;
	height: 100% !important;
}

.msgview_middle .scrollable-content {
	width: 100%;
	padding-right: 15px;
}

.msgview_middle .header-info td {
	vertical-align: top;
	word-wrap: break-word;
}

.msgview_middle .message-body-container {
	margin-top: 24px;
	width: 100%;
	padding-left: 57px;
	word-wrap: break-word;
}
/* ... */

